--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "circular-json": "^0.5.9",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.0.4",
