--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,14 @@
     "axios": "^1.3.6",
     "date-fns": "^2.30.0",
     "detect-port-alt": "^1.1.6",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
