--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "circular-json": "^0.5.9",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
